fix enumerations presenti