@@ -12,7 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class BibitaMapper {
@@ -34,22 +33,33 @@ public class BibitaMapper {
     }
 
     public BibitaDTO findByNome(String nome){
-        return Optional.ofNullable(bibitaRepository.findByNome(nome)).map(this::convertToDTO).orElseThrow(() -> new BibitaNotFoundException("Bibita "+nome+" non trovata!"));
+        return Optional.ofNullable(bibitaRepository.findByNome(nome))
+                .map(this::convertToDTO)
+                .orElseThrow(() -> new BibitaNotFoundException("Bibita "+nome+" non trovata!"));
     }
 
     List<BibitaDTO> findByTipologiaBibite(String tipologiaBibite){
-        return Optional.of(bibitaRepository.findByTipologiaBibite(TipologiaBibite.valueOf(tipologiaBibite)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new BibitaNotFoundException("Bibite per tipologia "+tipologiaBibite+" non trovato!"));
+        return Optional.of(bibitaRepository.findByTipologia(TipologiaBibite.valueOf(tipologiaBibite)))
+                .map(list -> list.stream().map(this::convertToDTO).toList())
+                .orElseThrow(() -> new BibitaNotFoundException("Bibite per tipologia "+tipologiaBibite+" non trovato!"));
     }
 
     List<BibitaDTO> findByStatus(String status){
-        return Optional.of(bibitaRepository.findByStatus(Status.valueOf(status)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new BibitaNotFoundException("Bibite per "+status+" non trovato!"));
+        return Optional.of(bibitaRepository.findByStatus(Status.valueOf(status)))
+                .map(list -> list.stream().map(this::convertToDTO).toList())
+                .orElseThrow(() -> new BibitaNotFoundException("Bibite per "+status+" non trovato!"));
     }
 
     List<BibitaDTO> findByStatusAndTipologiaBibite(String status, String tipologiaBibite){
-        return Optional.of(bibitaRepository.findByStatusAndTipologiaBibite(Status.valueOf(status), TipologiaBibite.valueOf(tipologiaBibite)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new BibitaNotFoundException("Bibite per status "+status+" e tipologia "+tipologiaBibite+" non trovate!"));
+
+        return Optional.of(bibitaRepository.findByStatusAndTipologia(Status.valueOf(status), TipologiaBibite.valueOf(tipologiaBibite)))
+                .map(list -> list.stream().map(this::convertToDTO).toList())
+                .orElseThrow(() -> new BibitaNotFoundException("Bibite per status "+status+" e tipologia "+tipologiaBibite+" non trovate!"));
     }
 
     List<BibitaDTO> findByStatusAndTipologiaMenu(String status, String tipologiaMenu){
-        return Optional.of(bibitaRepository.findByStatusAndTipologiaMenu(Status.valueOf(status), TipologiaMenu.valueOf(tipologiaMenu)).stream().map(this::convertToDTO).collect(Collectors.toList())).orElseThrow(() -> new BibitaNotFoundException("Bibite per status "+status+" e tipologia "+tipologiaMenu+" non trovate!"));
+        return Optional.of(bibitaRepository.findByStatusAndTipologiaMenu(Status.valueOf(status), TipologiaMenu.valueOf(tipologiaMenu)))
+                .map(list -> list.stream().map(this::convertToDTO).toList())
+                .orElseThrow(() -> new BibitaNotFoundException("Bibite per status "+status+" e tipologia "+tipologiaMenu+" non trovate!"));
     }
 }
